src/components/ApartmentsDemo/ApartmentsDemo.scss
.ApartmentsDemo {
  background-color: #f8f9fb;

  @media (max-width: 992px) {
    padding-bottom: 100px;
  }

  &__intro {
    padding-top: 45px;
    padding-bottom: 60px;

    @media (max-width: 992px) {
      padding-bottom: 35px;
    }
  }

  &__container {
    display: flex;
    justify-content: space-between;
    width: 98%;
    max-width: 1400px;
    padding-left: 15px;
    padding-right: 15px;
    margin: auto;

    &:nth-child(2) {
      margin-top: 10px;

      @media (max-width: 992px) {
        margin-top: 25px;
      }
    }

    @media (max-width: 992px) {
      display: block;
    }
  }

  &__info {
    width: 58%;

    @media (max-width: 992px) {
      width: 100%;
      margin-bottom: 20px;
    }
  }

  &__details {
    display: flex;
    justify-content: flex-end;
    width: 42%;

    & > div {
      width: 30%;

      @media (max-width: 992px) {
        width: auto;
      }
    }

    @media (max-width: 992px) {
      width: 100%;
      justify-content: space-between;
    }
  }

  &__accent {
    display: block;
    margin-bottom: 5px;
    
    font-weight: 600;
    font-size: 24px;
    line-height: 24px;
  }

  &__description {
    display: block;
    max-width: 120px;

    font-weight: 500;
    font-size: 14px;
    line-height: 21px;
    color: #8a94a6;
  }
}

